--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">OliveStoneAssignment</string>
+    <string name="title">유보미 - 올리브스톤 신입 안드로이드 개발 지원자</string>
+
 </resources>
