--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">OliveStoneAssignment</string>
     <string name="title">유보미 - 올리브스톤 신입 안드로이드 개발 지원자</string>
-
+    <string name="result_value">결과값</string>
+    <string name="input_value">입력값</string>
 </resources>
